--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,49 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- Primary Meta Tags -->
+    <title>basikit | 📚 Yet another React.js ui-kit</title>
+    <meta name="title" content="basikit | 📚 Yet another React.js ui-kit" />
+    <meta
+      name="description"
+      content="Bootstrapping a startup or fulfilling your side project idea? Use basikit to get up and running in no time with our prebuilt, accessible, and beautiful React.js components."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://albingroen.github.io/basikit/" />
+    <meta
+      property="og:title"
+      content="basikit | 📚 Yet another React.js ui-kit"
+    />
+    <meta
+      property="og:description"
+      content="Bootstrapping a startup or fulfilling your side project idea? Use basikit to get up and running in no time with our prebuilt, accessible, and beautiful React.js components."
+    />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/albin-groen/image/upload/v1594596624/components_osykja.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://albingroen.github.io/basikit/"
+    />
+    <meta
+      property="twitter:title"
+      content="basikit | 📚 Yet another React.js ui-kit"
+    />
+    <meta
+      property="twitter:description"
+      content="Bootstrapping a startup or fulfilling your side project idea? Use basikit to get up and running in no time with our prebuilt, accessible, and beautiful React.js components."
+    />
+    <meta
+      property="twitter:image"
+      content="https://res.cloudinary.com/albin-groen/image/upload/v1594596624/components_osykja.png"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
