--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script defer src="https://feedback.fish/ff.js?pid=b0bad41aa6a1be" />
     <div id="root"></div>
     <!--
       This HTML file is a template.
