Remove feedback fish

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script defer src="https://feedback.fish/ff.js?pid=b0bad41aa6a1be" />
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -82,5 +81,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script defer src="https://feedback.fish/ff.js?pid=b0bad41aa6a1be" /> -->
   </body>
 </html>
