--- a/public/index.html
+++ b/public/index.html
@@ -82,5 +82,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <!-- <script defer src="https://feedback.fish/ff.js?pid=b0bad41aa6a1be" /> -->
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
   </body>
 </html>
