:sparkles: Update og title

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
     -->
 
     <!-- Primary Meta Tags -->
-    <title>basikit | 📚 Yet another React.js ui-kit</title>
-    <meta name="title" content="basikit | 📚 Yet another React.js ui-kit" />
+    <title>Basikit | Beautiful and accessible React components</title>
+    <meta name="title" content="Basikit | Beautiful and accessible React components" />
     <meta
       name="description"
       content="Bootstrapping a startup or fulfilling your side project idea? Use basikit to get up and running in no time with our prebuilt, accessible, and beautiful React.js components."
@@ -38,7 +38,7 @@
     <meta property="og:url" content="https://albingroen.github.io/basikit/" />
     <meta
       property="og:title"
-      content="basikit | 📚 Yet another React.js ui-kit"
+      content="Basikit | Beautiful and accessible React components"
     />
     <meta
       property="og:description"
@@ -57,7 +57,7 @@
     />
     <meta
       property="twitter:title"
-      content="basikit | 📚 Yet another React.js ui-kit"
+      content="Basikit | Beautiful and accessible React components"
     />
     <meta
       property="twitter:description"
