:sparkles: Integrate convertkit modal

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,10 @@
 
     <!-- Primary Meta Tags -->
     <title>Basikit | Beautiful and accessible React components</title>
-    <meta name="title" content="Basikit | Beautiful and accessible React components" />
+    <meta
+      name="title"
+      content="Basikit | Beautiful and accessible React components"
+    />
     <meta
       name="description"
       content="Bootstrapping a startup or fulfilling your side project idea? Use basikit to get up and running in no time with our prebuilt, accessible, and beautiful React.js components."
@@ -82,5 +85,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script
+      async
+      data-uid="0c30fec2a6"
+      src="https://basikit-newsletter.ck.page/0c30fec2a6/index.js"
+    ></script>
   </body>
 </html>
